# implimentation_and_practice

./: .gitignore  .gitmodules  Dockerfile  docker_note  python_note.py
Advance_C/socket/: CMakeLists.txt  client.cpp  main.cpp
Advance_cpp/: note.txt
Advance_cpp/MyArray/: CMakeLists.txt  main.cpp
Advance_cpp/MyArray/include/: my_array.h
Advance_cpp/MyArray/src/: CMakeLists.txt  my_array.cpp
Advance_cpp/MyCout/: CMakeLists.txt  main.cpp
Advance_cpp/MyCout/include/: my_cout.h
Advance_cpp/MyCout/src/: CMakeLists.txt  my_cout.cpp
Advance_cpp/MyGrade/: CMakeLists.txt  main.cpp
Advance_cpp/MyGrade/include/: my_grade.h
Advance_cpp/MyGrade/src/: CMakeLists.txt  my_grade.cpp
Advance_cpp/STL/: map  map.cpp  string  string.cpp  vector  vector.cpp
Advance_cpp/Template/: template_ary  template_ary.cpp  template_cls  template_cls.cpp  template_fn  template_fn.cpp
Algorithm/CH10_BFS/: bfs.cpp
Algorithm/CH9_Graph/: adj_list.cpp  adj_matrix.cpp
Algorithm/Greedy/gas_station.txt/: gas_station.txt
Application/CH12_Namespace/: CMakeCache.txt  CMakeLists.txt  CYH.cpp  CYH.h  Makefile  Makefile_self  cmake_install.cmake  main  main.cpp  namespace_v1.h  namespace_v2.h
CMake_Udemy/: 3.1.CMakeLists_subdir.txt  3.2.CMakeLists_subdir.txt  4.1.CMakeLists_install.txt  4.2.CMakeLists_install_lib.txt  4.3.CMakeLists_install_findpkg.txt  4.4.CMakeLists_installed_use.txt  CMakeLists.txt  string_example.cmake  variable_CMakeLists.txt
Casadi/: test_install.py
Casadi/1.Rootfinding/: ex2.py
Casadi/2.Basic/: ex1.py
Casadi/4.NlpSolver/: ex1.py  solution.py
Casadi/6.Fitting/: rabbit_fox.py
Casadi/Rootfinding/: ex1.py  ex3.py
Concurrency/: hello
Concurrency/src/: hello.cpp
DataStruct/: note.txt
DataStruct/CH11_Hash/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  hash_func.cpp  main  main.cpp  unordered_map.cpp
DataStruct/CH12_Tree/: CMakeLists.txt  main.cpp
DataStruct/CH12_Tree/include/: binary_tree.h
DataStruct/CH12_Tree/src/: CMakeLists.txt  binary_tree.cpp
DataStruct/CH3_Class/: CMakeCache.txt  CMakeLists.txt  Course.cpp  Course.h  Course_v2.cpp  Course_v2.h  Course_v3.h  Makefile  Rectangle.cpp  Rectangle.h  cmake_install.cmake  main  main.cpp
DataStruct/CH6_Vector_Iterator/: CMakeLists.txt  main.cpp  mission.cpp
DataStruct/CH6_Vector_Iterator/include/: my_vector.h  my_vector_itr.h
DataStruct/CH6_Vector_Iterator/src/: CMakeLists.txt  Vector_solution.h  my_vector.cpp  my_vector_itr.cpp
DataStruct/CH8_LinkedList/: CMakeLists.txt  linkedlist_note.txt  main.cpp
DataStruct/CH8_LinkedList/include/: double_linked_list.h  linked_list.h
DataStruct/CH8_LinkedList/src/: CMakeLists.txt  double_linked_list.cpp  linked_list.cpp
DataStruct/CH9_Stack/: CMakeLists.txt  main.cpp
DataStruct/CH9_Stack/include/: stack.h
DataStruct/CH9_Stack/src/: CMakeLists.txt  stack.cpp
DataStructAlgo-py/: graph-represent.ipynb
Git/: note.txt
ROS2_Udemy/ros1_ws/devel/: .catkin  .rosinstall  setup.sh
ROS2_Udemy/ros2_ws/: note.txt
ROS2_Udemy/ros2_ws/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  (+1 more)
ROS_Udemy/src/advanced_package/: CMakeLists.txt  package.xml
ROS_Udemy/src/advanced_package/src/: add_service.cpp
ROS_Udemy/src/beginner_package/: CMakeLists.txt  package.xml
ROS_Udemy/src/beginner_package/launch/: timeTest.launch
ROS_Udemy/src/beginner_package/scripts/: listen.py  talk.py
ROS_Udemy/src/beginner_package/src/: listen.cpp  pub_sub.cpp  talk.cpp
ROS_Udemy/src/intermediate_package/: CMakeLists.txt  package.xml
ROS_Udemy/src/intermediate_package/include/intermediate_package/: talk.h
ROS_Udemy/src/intermediate_package/launch/: both_talkers.launch
ROS_Udemy/src/intermediate_package/msg/: Count.msg  Matrix.msg  NodeStatus.msg
ROS_Udemy/src/intermediate_package/src/: talk.cpp
ROS_Udemy/src/intermediate_package/test/: gtest.cpp
manufacture_station/: CMakeLists.txt  Readme.md  main.cpp
manufacture_station/cmakeLearn/: CMakeLists_note.txt  variable_example.cmake
manufacture_station/src/: CMakeLists.txt  Readme.md
manufacture_station/src/io/: CMakeLists.txt  i_o_file.cpp
manufacture_station/src/manuf_line/: CMakeLists.txt  manuf_line.cpp
manufacture_station/src/mmi/: CMakeLists.txt  mmi.cpp
manufacture_station/src/station/: CMakeLists.txt  station.cpp
manufacture_station/src/storage/: CMakeLists.txt  storage_unit.cpp
(+40 files in other folders)
