<?xml version="1.0"?>
<package format="2">
    <name>advanced_package</name>
    <version>0.0.0</version>
    <description>Adavance Course</description>
    <maintainer email="asdd@asdf.com"></maintainer>
    <license>TODO</license>

    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>roscpp</build_depend>
    <build_depend>rospy</build_depend>
    <build_depend>message_generation</build_depend>
</package>